# mailing

./: .env.sample  .gitignore  README.md  blog_data.json  catalog_data.json  category.json  group.json  group_data.json  product.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py  fill_category.py  fill_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_product_manufactured_at.py  0004_remove_product_manufactured_at.py  0005_alter_product_created_at.py  0006_rename_category_category_category_name.py  0007_alter_product_category.py  0008_alter_product_category.py  0009_contact_alter_product_category_and_more.py  0010_blog.py  0011_rename_prewiew_blog_preview.py  0012_version.py  0013_delete_blog.py  0014_product_owner.py  0015_alter_product_owner.py  0016_alter_product_options_product_is_published.py  0017_alter_product_options.py  0018_alter_product_options.py
catalog/templates/: base.html  contacts.html  home.html  product.html
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_list.html  category_list.html  contacts.html  home.html  product.html  product_form.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
(+6 files in other folders)
