[tool.poetry]
name = "ecom-dj"
version = "0.1.0"
description = ""
authors = ["Glushkov Alex <avgl@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
black = "^24.4.2"
ipython = "^8.25.0"
pytils = "^0.4.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
